[package]
name = "spawn_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_arrays = "0.1.0"
serde_json = "1"
actix-rt = "2"
shells = "0.2.0"
reqwest = { version = "0.12", features = ["native-tls", "json", "blocking"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
nix = { version = "0.29.0", features = [ "fs", "process" ] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html